# rpgforge

./: .gitignore  ARCHITECTURE_ANALYSIS.md  BUILDPLAN.md  BUILDPLAN_V2.md  Bugs  CMakeLists.txt  CONTRIBUTING.md  DEBUG_NOTES.md  GEMINI.md  LICENSE  PROJECT_MANAGER.md  README.md  build.sh  dbg.txt  org.kde.rpgforge.desktop  rpgforge.desktop  rpgforge_debug.log.20260415-193347.bak  rpgforge_debug.log.20260415-203235.bak  test_cast  test_cast.cpp  test_kompare.cpp  test_kpart.cpp  test_scrivener_structure.py
.claude/agents/: architect.md
.gemini/agents/: architect.md  build-packager.md  debugger.md  developer.md  devops-engineer.md  documentation-writer.md  gui-tester.md  performance-analyst.md  pr-reviewer.md  release-manager.md  requirements-analyst.md  security-analyst.md  test-runner.md  test-strategist.md  test-writer.md  ux-architect.md
conductor/: architectural-refactor-plan.md  explorations-enhancements.md  phase-10-analyzer.md  phase-11-onboarding.md  phase-12-data-import-plan.md  phase-13-librarian.md  phase-5-plan.md  phase-6-7-plan.md  phase-8-diff-and-history-refinement.md  phase-9-llm-foundation.md  project-manager-plan.md  ux.md  vars-directive-proposal.md  vision-reimagined.md
docs/: test-rules-simulator.md
mythos-app/: .gitignore  README.md  index.html  mythos-architecture-pivot.md  mythos-design-system.md  package-lock.json  package.json  vite.config.js
mythos-app/docs/: mythos-project-schema.md
mythos-app/src/: App.jsx  main.jsx
mythos-app/src-tauri/: Cargo.toml  tauri.conf.json
mythos-app/src-tauri/capabilities/: default.json
mythos-app/src-tauri/icons/: README.md  icon.icns
mythos-app/src-tauri/src/: lib.rs  main.rs
mythos-app/src/components/: MythosEditor.jsx  icons.jsx  tweaks-panel.jsx
mythos-app/src/lib/: projectBridge.js
mythos-app/src/screens/: AtlasScreen.jsx  CodexScreen.jsx  CorkboardScreen.jsx  EditorScreen.jsx  FocusMode.jsx  SettingsScreen.jsx  TimelineScreen.jsx  WeaverScreen.jsx
mythos-app/src/styles/: app.css  mythos.css  screens.css
scripts/: run-nvidia.sh
src/: agentgatekeeper.cpp  agentgatekeeper.h  analyzerservice.cpp  analyzerservice.h  breadcrumbbar.cpp  breadcrumbbar.h  characterdossierservice.cpp  characterdossierservice.h  charactergenerator.cpp  charactergenerator.h  chatpanel.cpp  chatpanel.h  clonedialog.cpp  clonedialog.h  compiledialog.cpp  compiledialog.h  corkboardcard.cpp  corkboardcard.h  corkboardview.cpp  corkboardview.h  debuglog.h  diagnosticdetaildialog.cpp  diagnosticdetaildialog.h  diceengine.cpp  diceengine.h  documentconverter.cpp  documentconverter.h  draghandle.cpp  draghandle.h  entitycommunitydetector.cpp  entitycommunitydetector.h  entitygraphmodel.cpp  entitygraphmodel.h  entitygraphpanel.cpp  entitygraphpanel.h  explorationsgraphview.cpp  explorationsgraphview.h  explorationspanel.cpp  explorationspanel.h  explorersidebar.cpp  (+118 more)
test_project_service/: .rpgforge.db
tests/: test_entitycommunitydetector.cpp  test_entitygraphmodel.cpp  test_explorationgraphview.cpp  test_fswatcher.cpp  test_gitservice.cpp  test_librarian.cpp  test_librariandatabase.cpp  test_librarianservice.cpp  test_lorekeeper_smoke.cpp  test_projectmanager.cpp  test_projectmanager_disk_authority.cpp  test_projectmanager_mutations.cpp  test_projectmetadata.cpp  test_projecttreemodel.cpp  test_ragassistservice.cpp  test_ragquality.cpp  test_reconciliation.cpp  test_relationshipgraph_data.cpp  test_treesnapshot.cpp  test_unsavedchangesdialog.cpp
